<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addStoryActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddStoryActivity">

    <ScrollView
        android:id="@+id/scrollAddStory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivPreviewImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/image_before_upload"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_image_24" />

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_button"
                android:text="@string/camera"
                android:textAllCaps="false"
                app:backgroundTint="@color/custom_button_color"
                app:layout_constraintEnd_toStartOf="@+id/btnGallery"
                app:layout_constraintStart_toStartOf="@+id/ivPreviewImage"
                app:layout_constraintTop_toBottomOf="@+id/ivPreviewImage" />

            <Button
                android:id="@+id/btnGallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/custom_button"
                android:text="@string/gallery"
                android:textAllCaps="false"
                app:backgroundTint="@color/custom_button_color2"
                app:layout_constraintBottom_toBottomOf="@+id/btnCamera"
                app:layout_constraintEnd_toEndOf="@+id/ivPreviewImage"
                app:layout_constraintStart_toEndOf="@+id/btnCamera"
                app:layout_constraintTop_toTopOf="@+id/btnCamera" />

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/custom_button"
                android:text="@string/upload"
                android:textAllCaps="false"
                app:backgroundTint="@color/custom_button_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/edtDescription"
                app:layout_constraintStart_toStartOf="@+id/edtDescription"
                app:layout_constraintTop_toBottomOf="@+id/edtLong" />

            <EditText
                android:id="@+id/edtDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/input_border"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minHeight="140dp"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="@+id/btnGallery"
                app:layout_constraintStart_toStartOf="@+id/btnCamera"
                app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <CheckBox
                android:id="@+id/cbUpload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/txt_input_lat_long"
                app:layout_constraintEnd_toEndOf="@+id/edtDescription"
                app:layout_constraintStart_toStartOf="@+id/edtDescription"
                app:layout_constraintTop_toBottomOf="@+id/edtDescription" />

            <EditText
                android:id="@+id/edtLat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/latitude"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/cbUpload"
                app:layout_constraintStart_toStartOf="@+id/cbUpload"
                app:layout_constraintTop_toBottomOf="@+id/cbUpload" />

            <EditText
                android:id="@+id/edtLong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/longitude"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/edtLat"
                app:layout_constraintStart_toStartOf="@+id/edtLat"
                app:layout_constraintTop_toBottomOf="@+id/edtLat" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>