<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/app_name"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.alcorp.storyapp.view.EmailEditText
        android:id="@+id/edtEmailLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_border"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:scrollHorizontally="true"
        android:maxLines="1"
        android:inputType="text"
        android:minHeight="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.alcorp.storyapp.view.PasswordEditText
        android:id="@+id/edtPassLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minHeight="42dp"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:scrollHorizontally="true"
        android:maxLines="1"
        android:inputType="textPassword"
        android:background="@drawable/input_border"
        app:layout_constraintEnd_toEndOf="@+id/edtEmailLogin"
        app:layout_constraintStart_toStartOf="@+id/edtEmailLogin"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/submit"
        android:textAllCaps="false"
        app:backgroundTint="@color/custom_button_color"
        app:layout_constraintEnd_toEndOf="@+id/edtPassLogin"
        app:layout_constraintStart_toStartOf="@+id/edtPassLogin"
        app:layout_constraintTop_toBottomOf="@+id/edtPassLogin" />

    <TextView
        android:id="@+id/tvRegis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="30dp"
        android:gravity="center"
        android:text="@string/txt_dont_have_account"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>